chore: add rewrites on vercel.json

--- a/monitoring-app/vercel.json
+++ b/monitoring-app/vercel.json
@@ -8,6 +8,9 @@
           "distDir": "dist"
         }
       }
+    ],
+    "rewrites":  [
+      {"source": "/(.*)", "destination": "/"}
     ]
   }
   
